WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71440
[GTK] Fix build-break on
r99143
https://bugs.webkit.org/show_bug.cgi?id=71440
Summary
[GTK] Fix build-break on r99143
ChangSeok Oh
Reported
2011-11-03 00:17:31 PDT
Two variables should be relocated, and a method should be replaced.
Attachments
Proposed patch
(4.03 KB, patch)
2011-11-03 00:36 PDT
,
ChangSeok Oh
no flags
Details
Formatted Diff
Diff
Updated patch
(3.06 KB, patch)
2011-11-03 01:06 PDT
,
ChangSeok Oh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
ChangSeok Oh
Comment 1
2011-11-03 00:36:06 PDT
Created
attachment 113440
[details]
Proposed patch Proposed patch. Mimic changes to fix build break.
WebKit Review Bot
Comment 2
2011-11-03 00:37:19 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
ChangSeok Oh
Comment 3
2011-11-03 01:06:43 PDT
Created
attachment 113441
[details]
Updated patch
Philippe Normand
Comment 4
2011-11-03 01:54:45 PDT
Comment on
attachment 113441
[details]
Updated patch Clearing flags on attachment: 113441 Committed
r99149
: <
http://trac.webkit.org/changeset/99149
>
Philippe Normand
Comment 5
2011-11-03 01:55:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug