[GTK] Fix build-break on r99143 https://bugs.webkit.org/show_bug.cgi?id=71440

Patch by ChangSeok Oh <shivamidow@gmail.com> on 2011-11-03
Reviewed by Philippe Normand.

dragOperation() should be replaced with dragSession().operation since it was removed.
And didDetectXSSForFrame of WKPageLoaderClient should be relocated.

* UIProcess/API/gtk/WebKitWebLoaderClient.cpp:
(webkitWebLoaderClientAttachLoaderClientToPage):
* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseDragDataReceived):
(webkitWebViewBaseDragMotion):

git-svn-id: svn://svn.chromium.org/blink/trunk@99149 bbb929c8-8fbe-4397-9dbb-9b2b20218538