third_party/WebKit/Source/WebKit2/UIProcess/API/gtk/WebKitWebLoaderClient.cpp
@@ -163,7 +163,6 @@ void webkitWebLoaderClientAttachLoaderClientToPage(WebKitWebLoaderClient* loader
         0, // didRemoveFrameFromHierarchy
         0, // didDisplayInsecureContentForFrame
         0, // didRunInsecureContentForFrame
-        0, // didDetectXSSForFrame
         0, // canAuthenticateAgainstProtectionSpaceInFrame
         0, // didReceiveAuthenticationChallengeInFrame
         didChangeProgress, // didStartProgress
@@ -174,7 +173,8 @@ void webkitWebLoaderClientAttachLoaderClientToPage(WebKitWebLoaderClient* loader
         0, // processDidCrash
         didChangeBackForwardList,
         0, // shouldGoToBackForwardListItem
-        0 // didFailToInitializePlugin
+        0, // didFailToInitializePlugin
+        0 // didDetectXSSForFrame
     };
     WKPageSetPageLoaderClient(wkPage, &wkLoaderClient);
 }
